--- a/lion-client/pom.xml
+++ b/lion-client/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>com.dianping.lion</groupId>
 	<artifactId>lion-client</artifactId>
-	<version>0.3.0-beta</version>
+	<version>0.3.1</version>
 	<name>lion-client</name>
 
 	<dependencies>
