--- a/lion-console/pom.xml
+++ b/lion-console/pom.xml
@@ -97,7 +97,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>lion-console-${env}-${version}</finalName>
+		<finalName>lion-console-${env}</finalName>
 		<filters>
 			<filter>src/main/filters/config-${env}.properties</filter>
 		</filters>
