--- a/lion-service/pom.xml
+++ b/lion-service/pom.xml
@@ -47,6 +47,7 @@
             <groupId>com.dianping.lion</groupId>
             <artifactId>lion-${env}</artifactId>
             <version>1.0.0</version>
+			<scope>provided</scope>
         </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -155,6 +156,12 @@
 			<groupId>com.dianping.dpsf</groupId>
 			<artifactId>dpsf-net</artifactId>
 			<version>1.8.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.dianping.lion</groupId>
+					<artifactId>lion-dev</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
         <dependency>
             <groupId>com.netflix.curator</groupId>
