--- a/lion-api/src/main/filters/config-product.properties
+++ b/lion-api/src/main/filters/config-product.properties
@@ -12,7 +12,9 @@ filter.lion-api.dbims.lionpath=/lion/lion/lionapi?timestamp=
 filter.lion-api.dbims.srtkey=lionsrt1234_
 
 filter.lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
-filter.lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
+#filter.lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
+#filter.lion-console.ldap.url=ldap://ldap.dianpingoa.com:389/DC=dianpingoa,DC=com
+filter.lion-console.ldap.basedn=OU=SHA,OU=Normal,OU=1_UserAccount,DC=dianpingoa,DC=com
 filter.lion-console.ldap.username=lionauth
 filter.lion-console.ldap.passwd=bxHxXopGJOy78Jze3LWi
 
