--- a/lion-console/pom.xml
+++ b/lion-console/pom.xml
@@ -93,7 +93,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>lion-console-${env}</finalName>
+		<finalName>lion-console-${env}-${version}</finalName>
 		<filters>
 			<filter>src/main/filters/config-${env}.properties</filter>
 		</filters>
