--- a/lion-console/src/main/filters/config-product.properties
+++ b/lion-console/src/main/filters/config-product.properties
@@ -7,7 +7,7 @@ filter.lion-console.lion-db.c3p0.maxSize=25
 filter.lion-console.lion-db.c3p0.initialSize=10
 
 filter.lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
-filter.lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
+filter.lion-console.ldap.basedn=OU=SHA,OU=Normal,OU=1_UserAccount,DC=dianpingoa,DC=com
 filter.lion-console.ldap.username=lionauth
 filter.lion-console.ldap.passwd=bxHxXopGJOy78Jze3LWi
 
