--- a/lion-api/pom.xml
+++ b/lion-api/pom.xml
@@ -10,6 +10,7 @@
 
     <artifactId>lion-api</artifactId>
     <packaging>war</packaging>
+    <version>0.3.1-SNAPSHOT</version>
 
     <name>lion-api</name>
 
@@ -70,7 +71,7 @@
     </dependencies>
 
     <build>
-        <finalName>lion-api-${env}</finalName>
+        <finalName>lion-api-${env}-${version}</finalName>
         <filters>
             <filter>src/main/filters/config-${env}.properties</filter>
         </filters>
