--- a/lion-api/pom.xml
+++ b/lion-api/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>lion-${env}</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.1.23</version>
+        </dependency>
     </dependencies>
 
     <build>
