--- a/lion-client/pom.xml
+++ b/lion-client/pom.xml
@@ -5,7 +5,7 @@
     <parent>
 		<artifactId>lion-all</artifactId>
 		<groupId>com.dianping.lion</groupId>
-		<version>0.3.2</version>
+		<version>0.3.3</version>
 	</parent>
 
 	<artifactId>lion-client</artifactId>
@@ -14,34 +14,45 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>zookeeper</groupId>
-			<artifactId>zookeeper</artifactId>
-			<version>3.3.2</version>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.5</version>
+        </dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+            <version>1.6.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
+            <version>1.6.6</version>
 		</dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
-			<optional>true</optional>
+            <version>2.5.6</version>
 		</dependency>
         <dependency>
             <groupId>org.jodd</groupId>
             <artifactId>jodd-bean</artifactId>
-            <version>3.4.2</version>
+            <version>3.4.9</version>
         </dependency>
         <dependency>
-            <groupId>com.netflix.curator</groupId>
+            <groupId>org.apache.curator</groupId>
             <artifactId>curator-test</artifactId>
-            <version>1.1.18</version>
+            <version>2.3.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.netflix.curator</groupId>
+            <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
-            <version>1.1.18</version>
+            <version>2.3.0</version>
             <scope>test</scope>
         </dependency>
 	</dependencies>
